# twopow

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  BRANDING.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  NOTICE  PROOF.md  Package.swift  README.de.md  README.es.md  README.ja.md  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  SPEC.md  SUPPORT.md  coverage-summary.json
.cache/clangd/index/: cli_test.cpp.51EC9ED8CC9A72DA.idx  main.cpp.4BBD7561EB07B7EF.idx  twopow.cpp.246F9CEE6CD66C1A.idx  twopow.hpp.78DC1E14FE450D11.idx  twopow_benchmark.cpp.EB90C9BAFCE8C476.idx  twopow_test.cpp.A769F3533E8335B5.idx
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: analysis.yml  bindings.yml  ci.yml  codeql.yml  coverage.yml  docs.yml  fuzz.yml  lint.yml  package-dryrun.yml  publish-packages.yml  release.yml  sanitizers.yml  service.yml  wrapper-csharp.yml  wrapper-go.yml  wrapper-java.yml  wrapper-kotlin.yml  wrapper-node.yml  wrapper-ruby.yml  wrapper-swift.yml  wrappers.yml
app/: CMakeLists.txt  main.cpp
benchmarks/: CMakeLists.txt  twopow_benchmark.cpp
bindings/: README.md
bindings/c/: CMakeLists.txt
bindings/c/test/: twopow_c_test.c
bindings/python/: CMakeLists.txt  twopow_py.cpp
bindings/wasm/: build.sh  index.html  twopow_wasm.cpp
cmake/: twopowConfig.cmake.in
docs/: Doxyfile  index.md  logo.txt
fuzz/: CMakeLists.txt  twopow_fuzz.cpp
include/twopow/: twopow.hpp
man/: twopow-cli.1
packaging/: Dockerfile  conanfile.py  vcpkg.json
scripts/: vendor-core.sh
service/: CMakeLists.txt  Dockerfile  README.md  main.cpp  openapi.yaml
tests/: CMakeLists.txt  cli_test.cpp  twopow_test.cpp
wrappers/csharp/: README.md
wrappers/csharp/Twopow/: TwoPow.cs  Twopow.csproj
wrappers/csharp/Twopow.Tests/: TwoPowTests.cs  Twopow.Tests.csproj
wrappers/go/: README.md  go.mod
wrappers/go/twopow/: twopow.go  twopow_test.go
wrappers/java/: README.md  build-native.sh  pom.xml
wrappers/java/native/: twopow_jni.c
wrappers/java/src/main/java/io/github/dalamber/twopow/: NativeLoader.java  Twopow.java
wrappers/java/src/test/java/io/github/dalamber/twopow/: TwopowTest.java
wrappers/kotlin/: README.md  build.gradle.kts  settings.gradle.kts
wrappers/kotlin/native/: CMakeLists.txt
wrappers/kotlin/src/main/kotlin/io/github/dalamber/twopow/: NativeLoader.kt  Twopow.kt
wrappers/kotlin/src/test/kotlin/io/github/dalamber/twopow/: TwopowTest.kt
wrappers/node/: README.md  binding.gyp  index.js  package.json
wrappers/node/native/: twopow_addon.c
wrappers/node/test/: test.js
wrappers/ruby/: README.md  twopow.gemspec
wrappers/ruby/ext/twopow/: csrc_twopow_c.cpp  extconf.rb  twopow_ext.c
wrappers/ruby/lib/: twopow.rb
wrappers/ruby/test/: test_twopow.rb
wrappers/swift/: README.md
wrappers/swift/Sources/CTwopow/: twopow.cpp
wrappers/swift/Sources/Twopow/: Twopow.swift
wrappers/swift/Tests/TwopowTests/: TwopowTests.swift
